# hermes_backup

./: .env.example  .gitignore  ARCHITECTURE.md  CODEX_PROMPT.md  CODING_STANDARDS.md  DATABASE_SCHEMA.sql  IMPLEMENTATION_PLAN.md  PREMORTEM.md  README.md  WINDOWS_TASK_SCHEDULER.md  docker-compose.yml  pyproject.toml
activity/: 2026-06-18-hermes-activity.md
docs/: life-management-agent-spec.md
reports/: family_budget_dashboard.md  family_budget_dashboard_he.md  family_budget_dashboard_he_1page.md  family_budget_template.md
source_snapshots/financial_agent_2026-06-18/: MANIFEST.md
source_snapshots/financial_agent_2026-06-18/tests/financial_agent/: test_decision_log_and_orchestrator.py  test_pdf_sources.py  test_policy.py  test_sources.py
task_reminder/app/: cli.py  config.py  db.py  models.py
task_reminder/app/api/: server.py
task_reminder/app/connectors/: base.py  google_calendar.py  google_tasks.py  trello.py
task_reminder/app/financial_agent/: __init__.py  budget_monitor.py  cli.py  coordinator.py  intake.py  models.py  monthly_report.py
task_reminder/app/life_agent/: __init__.py  cli.py  models.py  orchestrator.py  planning.py  reporting.py
task_reminder/app/notifications/: console.py  telegram.py
task_reminder/app/services/: alert_service.py  completion_service.py  recurrence_service.py  sync_service.py
tests/: test_alerts.py  test_recurrence.py
tests/financial_agent/: test_budget_and_cashflow.py  test_investments_and_coordinator.py  test_models_and_reporting.py
tests/life_agent/: test_planning.py  test_reporting.py
(+9 files in other folders)
